icon moved in assets folder

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quran Shorts — Editor By TheAAA</title>
-    <link rel="icon" type="image/x-icon" href="quran.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/quran.ico" />
 
     <!-- Free Google Fonts (original set) -->
     <link
@@ -99,7 +99,7 @@
         width: 34px;
         height: 34px;
         border-radius: 10px;
-        background: url("quran.png") center/contain no-repeat;
+        background: url("assets/quran.png") center/contain no-repeat;
       }
       .title {
         margin: 0;
