--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     />
 
     <style>
+      /* ==========================================================================
+     Quran Shorts — Editor (FULL CSS)
+     ========================================================================== */
+
       :root {
         --bg: #0b0d12;
         --panel: #0f131a;
@@ -44,15 +48,22 @@
         /* Preview size */
         --previewMax: 360px;
         --previewMaxMobile: 210px;
+
+        /* Hover & focus tokens */
+        --hover-ring: rgba(124, 92, 255, 0.35);
+        --hover-border: rgba(124, 92, 255, 0.55);
+        --hover-shadow-btn: 0 8px 22px rgba(124, 92, 255, 0.22);
       }
 
       * {
         box-sizing: border-box;
       }
+
       html,
       body {
         height: 100%;
       }
+
       body {
         margin: 0;
         font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial,
@@ -70,6 +81,8 @@
           var(--bg);
         color: var(--text);
       }
+
+      /* ===================== Layout ===================== */
 
       .app {
         height: 100%;
@@ -168,12 +181,15 @@
         border: 1px solid var(--line);
         border-radius: 10px;
         background: #0c1117;
+        transition: border-color 0.12s ease, box-shadow 0.12s ease,
+          transform 0.12s ease;
       }
       .toggle input {
         width: 16px;
         height: 16px;
       }
 
+      /* Form base */
       select,
       button,
       input[type="range"],
@@ -188,12 +204,8 @@
         border-radius: 10px;
         outline: none;
         width: 100%;
-      }
-      select:focus,
-      input[type="range"]:focus,
-      input[type="color"]:focus {
-        border-color: rgba(124, 92, 255, 0.6);
-        box-shadow: 0 0 0 3px rgba(124, 92, 255, 0.15);
+        transition: border-color 0.12s ease, box-shadow 0.12s ease,
+          transform 0.12s ease;
       }
 
       input[type="color"] {
@@ -235,7 +247,22 @@
         margin-top: -6px;
         box-shadow: 0 3px 12px rgba(0, 0, 0, 0.4);
       }
+      input[type="range"]::-moz-range-track {
+        height: 6px;
+        border-radius: 999px;
+        background: linear-gradient(90deg, var(--accent-1), var(--accent-2));
+        opacity: 0.6;
+      }
+      input[type="range"]::-moz-range-thumb {
+        width: 18px;
+        height: 18px;
+        border-radius: 50%;
+        background: #fff;
+        border: 2px solid #cbd5e1;
+        box-shadow: 0 3px 12px rgba(0, 0, 0, 0.4);
+      }
 
+      /* Buttons */
       .btn {
         cursor: pointer;
         user-select: none;
@@ -245,16 +272,14 @@
         font-weight: 700;
         padding: 10px 12px;
         border-radius: 10px;
-        box-shadow: 0 8px 24px rgba(124, 92, 255, 0.35);
-        transition: transform 0.12s ease, box-shadow 0.12s ease;
+        transition: transform 0.12s ease, box-shadow 0.12s ease,
+          border-color 0.12s ease;
       }
       .btn.ghost {
         background: #0c1117;
         color: var(--text);
         border: 1px solid var(--line);
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        transition: transform 0.12s ease, border-color 0.12s ease,
-          box-shadow 0.12s ease;
+        box-shadow: none; /* hover adds shadow for buttons only */
       }
       .btn:disabled {
         opacity: 0.5;
@@ -262,25 +287,82 @@
         transform: none !important;
         box-shadow: none !important;
       }
-      /* Interactive states for buttons */
-      .btn:hover:not(:disabled) {
-        box-shadow: 0 12px 32px rgba(124, 92, 255, 0.45);
-        transform: translateY(-1px);
+
+      /* ===================== Interactables (affordances) ===================== */
+
+      /* Pointers for interactables (text inputs keep I-beam) */
+      button,
+      .btn,
+      .file-trigger,
+      .toggle,
+      .brand .theme-toggle,
+      .preview-buttons button,
+      .transport button,
+      select,
+      input[type="checkbox"],
+      input[type="radio"],
+      input[type="range"],
+      input[type="color"],
+      label[for] {
+        cursor: pointer;
       }
-      .btn:active:not(:disabled) {
-        transform: translateY(1px);
-        box-shadow: 0 6px 16px rgba(124, 92, 255, 0.3);
-      }
-      .btn.ghost:hover:not(:disabled) {
-        border-color: var(--accent-1);
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-        transform: translateY(-1px);
-      }
-      .btn.ghost:active:not(:disabled) {
-        transform: translateY(1px);
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+      input[type="text"] {
+        cursor: text;
       }
 
+      /* NON-BUTTON hover (border-only) */
+      .file-trigger:hover,
+      .toggle:hover,
+      select:hover,
+      input[type="color"]:hover,
+      input[type="range"]:hover,
+      input[type="text"]:hover {
+        border-color: var(--hover-border);
+        box-shadow: 0 0 0 3px rgba(124, 92, 255, 0.12); /* ring, not a drop shadow */
+        transform: none;
+      }
+
+      /* Inputs/text focus (ring, not shadow) */
+      input[type="text"]:focus {
+        border-color: var(--hover-border);
+        box-shadow: 0 0 0 3px rgba(124, 92, 255, 0.12);
+      }
+
+      /* Buttons — hover/active: shadow + blue border ring */
+      .btn {
+        border: 1px solid transparent;
+      } /* allow showing border color on solid buttons */
+      button:hover:not(:disabled),
+      .btn:hover:not(:disabled) {
+        border-color: var(--hover-border);
+        box-shadow: var(--hover-shadow-btn), 0 0 0 3px rgba(124, 92, 255, 0.12);
+        transform: translateY(-1px);
+      }
+      button:active:not(:disabled),
+      .btn:active:not(:disabled) {
+        transform: translateY(1px);
+        box-shadow: 0 4px 14px rgba(124, 92, 255, 0.18);
+      }
+
+      /* Universal keyboard focus ring (all controls) */
+      button:focus-visible,
+      .btn:focus-visible,
+      .file-trigger:focus-visible,
+      .toggle:focus-visible,
+      .brand .theme-toggle:focus-visible,
+      select:focus-visible,
+      input[type="text"]:focus-visible,
+      input[type="color"]:focus-visible,
+      input[type="range"]:focus-visible,
+      input[type="checkbox"]:focus-visible,
+      input[type="radio"]:focus-visible,
+      label[for]:focus-visible {
+        outline: none;
+        box-shadow: 0 0 0 4px var(--hover-ring);
+        border-color: var(--hover-border);
+      }
+
+      /* Status & meter */
       .status {
         font-size: 12px;
         color: var(--muted);
@@ -308,8 +390,17 @@
         opacity: 0.7;
         font-size: 12px;
         color: var(--muted);
+        text-decoration: none;
+      }
+      .version-info .dev-name {
+        text-decoration: underline;
+      }
+      .version-info:hover {
+        text-decoration: underline;
+        cursor: pointer;
       }
 
+      /* Transport row */
       .transport {
         display: grid;
         grid-template-columns: repeat(5, auto);
@@ -317,7 +408,8 @@
         align-items: center;
       }
 
-      /* Preview area (right 30%) */
+      /* ===================== Preview (right 30%) ===================== */
+
       .preview {
         padding: 24px;
         display: grid;
@@ -341,11 +433,151 @@
         border: 1px solid rgba(0, 0, 0, 0.08);
         box-shadow: 0 18px 60px rgba(0, 0, 0, 0.35);
       }
+
+      /* Preview controls */
+      .preview-controls {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 8px;
+        width: 100%;
+      }
+      .preview-buttons {
+        display: flex;
+        gap: 12px;
+        justify-content: center;
+        width: 100%;
+      }
+
+      .preview-volume {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        justify-content: center;
+        width: 100%;
+      }
+      #volumeSlider {
+        width: 220px;
+      }
+
+      .audio-error-message {
+        color: #856404;
+        font-size: 14px;
+        display: none;
+        text-align: center;
+        max-width: 80%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        margin: 0 auto;
+      }
+
       audio {
         width: 100%;
       }
 
-      /* Responsive */
+      /* ===================== Background panel: inline strip ===================== */
+
+      .background-panel .inline-row {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        flex-wrap: nowrap;
+        overflow-x: auto;
+        padding-bottom: 4px;
+      }
+      .background-panel .inline-row .toggle,
+      .background-panel .inline-row .field {
+        flex: 0 0 auto;
+      }
+      .background-panel .inline-row select,
+      .background-panel .inline-row input[type="color"] {
+        width: 48px;
+      }
+      .background-panel .inline-row .hint {
+        margin-left: auto;
+        white-space: nowrap;
+        opacity: 0.8;
+        font-size: 11px;
+      }
+
+      /* ===================== Choose File (design) ===================== */
+
+      .upload-row {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        align-items: center;
+        gap: 10px 12px;
+        margin-top: 8px;
+      }
+      .file-trigger {
+        display: inline-flex;
+        align-items: center;
+        gap: 8px;
+        padding: 10px 14px;
+        border-radius: 10px;
+        border: 1px solid var(--line);
+        background: linear-gradient(
+          135deg,
+          rgba(124, 92, 255, 0.16),
+          rgba(34, 211, 238, 0.16)
+        );
+        color: var(--text);
+        font-weight: 700;
+        user-select: none;
+        white-space: nowrap;
+        transition: border-color 0.12s ease, box-shadow 0.12s ease,
+          transform 0.12s ease;
+      }
+      .file-trigger svg {
+        width: 18px;
+        height: 18px;
+        opacity: 0.9;
+      }
+      .file-note {
+        font-size: 12px;
+        color: var(--muted);
+      }
+
+      /* Accessible but hidden real file input */
+      #bgUploadInput.visually-hidden {
+        position: absolute !important;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        margin: -1px;
+        overflow: hidden;
+        clip: rect(0 0 0 0);
+        white-space: nowrap;
+        border: 0;
+      }
+
+      /* ===================== Theme toggle in brand ===================== */
+
+      .brand .theme-toggle {
+        margin-left: auto;
+        width: 40px;
+        height: 40px;
+        padding: 0;
+        border-radius: 8px;
+        border: 1px solid var(--line);
+        background: linear-gradient(
+          135deg,
+          rgba(124, 92, 255, 0.06),
+          rgba(34, 211, 238, 0.04)
+        );
+        color: var(--text);
+        cursor: pointer;
+        font-size: 18px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        transition: transform 0.12s ease, border-color 0.12s ease,
+          box-shadow 0.12s ease;
+      }
+
+      /* ===================== Responsive ===================== */
+
       @media (max-width: 900px) {
         .app {
           grid-template-columns: 1fr;
@@ -364,105 +596,8 @@
         }
       }
 
-      /* Background panel: make everything sit on one horizontal row */
-      .background-panel .inline-row {
-        display: flex;
-        align-items: center;
-        gap: 12px;
-        flex-wrap: nowrap; /* keep single line */
-        overflow-x: auto; /* allow sideways scroll if too many items */
-        padding-bottom: 4px;
-      }
+      /* ===================== Light Theme Overrides ===================== */
 
-      /* Keep each control compact on the line */
-      .background-panel .inline-row .toggle,
-      .background-panel .inline-row .field {
-        flex: 0 0 auto;
-      }
-
-      /* Reasonable input widths so they don’t explode the row */
-      .background-panel .inline-row select,
-      .background-panel .inline-row input[type="color"] {
-        width: 48px;
-      }
-
-      /* Nicer hint placement to the far right */
-      .background-panel .inline-row .hint {
-        margin-left: auto;
-        white-space: nowrap;
-        opacity: 0.8;
-        font-size: 11px;
-      }
-      .preview-controls {
-        display: flex;
-        justify-content: center;
-        gap: 12px;
-      }
-
-      /* ——— Choose File (design only) ——— */
-      .upload-row {
-        display: grid;
-        grid-template-columns: auto 1fr;
-        align-items: center;
-        gap: 10px 12px;
-        margin-top: 8px;
-      }
-
-      .file-trigger {
-        display: inline-flex;
-        align-items: center;
-        gap: 8px;
-        padding: 10px 14px;
-        border-radius: 10px;
-        border: 1px solid var(--line);
-        background: linear-gradient(
-          135deg,
-          rgba(124, 92, 255, 0.16),
-          rgba(34, 211, 238, 0.16)
-        );
-        color: var(--text);
-        font-weight: 700;
-        cursor: pointer;
-        user-select: none;
-        white-space: nowrap;
-        transition: transform 0.08s ease, box-shadow 0.15s ease,
-          border-color 0.15s ease;
-      }
-      .file-trigger:hover {
-        box-shadow: 0 8px 24px rgba(124, 92, 255, 0.16);
-        border-color: rgba(124, 92, 255, 0.45);
-      }
-      .file-trigger:active {
-        transform: translateY(1px);
-      }
-
-      /* small icon */
-      .file-trigger svg {
-        width: 18px;
-        height: 18px;
-        opacity: 0.9;
-      }
-
-      /* subtle helper text */
-      .file-note {
-        font-size: 12px;
-        color: var(--muted);
-      }
-
-      /* keep the real input accessible but hidden visually */
-      #bgUploadInput.visually-hidden {
-        position: absolute !important;
-        width: 1px;
-        height: 1px;
-        padding: 0;
-        margin: -1px;
-        overflow: hidden;
-        clip: rect(0 0 0 0);
-        white-space: nowrap;
-        border: 0;
-      }
-
-      /* Light theme overrides (colors only; sizes/shapes unchanged) */
       html[data-theme="light"] {
         --bg: #ffffff;
         --panel: #ffffff;
@@ -470,13 +605,10 @@
         --text: #0b1220;
         --muted: #556778;
         --line: rgba(11, 18, 32, 0.06);
-        --accent-1: #6b46ff; /* keep accent hues similar */
+        --accent-1: #6b46ff;
         --accent-2: #0891b2;
-
-        /* Override common hard-coded colors to ensure full light-mode coverage */
       }
 
-      /* Additional per-selector overrides for light mode to catch hard-coded colors */
       html[data-theme="light"] body {
         background: radial-gradient(
             1200px 1200px at 10% -10%,
@@ -513,9 +645,8 @@
         border: 1px solid var(--line);
       }
       html[data-theme="light"] .btn {
-        color: #ffffff; /* keep button text readable on accent */
+        color: #ffffff;
         background: linear-gradient(135deg, var(--accent-1), var(--accent-2));
-        box-shadow: 0 10px 28px rgba(107, 70, 255, 0.12);
       }
       html[data-theme="light"] .btn.ghost {
         background: var(--panel-2);
@@ -532,10 +663,6 @@
         color: var(--text);
         border: 1px solid var(--line);
       }
-      html[data-theme="light"] .file-trigger:hover {
-        box-shadow: 0 8px 24px rgba(107, 70, 255, 0.08);
-        border-color: rgba(107, 70, 255, 0.18);
-      }
       html[data-theme="light"] #previewCanvas {
         background: #f7f7f9;
         border: 1px solid rgba(11, 18, 32, 0.04);
@@ -549,42 +676,19 @@
         border: 1px solid var(--line);
       }
 
-      /* Theme toggle placed inline with the brand (right side of the brand row) */
-      .brand .theme-toggle {
-        margin-left: auto; /* push to the right side of the .brand row */
-        align-self: center;
-        width: 40px; /* fixed square size */
-        height: 40px; /* fixed square size */
-        padding: 0; /* remove internal padding so it's a square */
-        border-radius: 8px; /* slight rounding for a square button */
-        border: 1px solid var(--line);
-        background: linear-gradient(
-          135deg,
-          rgba(124, 92, 255, 0.06),
-          rgba(34, 211, 238, 0.04)
-        );
-        color: var(--text);
-        cursor: pointer;
-        font-size: 18px; /* slightly larger icon */
-        display: inline-flex;
-        align-items: center;
-        justify-content: center; /* center the icon */
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        transition: transform 0.12s ease, border-color 0.12s ease,
-          box-shadow 0.12s ease;
+      /* Buttons keep light-mode hover shadow + blue ring; others border-only */
+      html[data-theme="light"] button:hover:not(:disabled),
+      html[data-theme="light"] .btn:hover:not(:disabled) {
+        box-shadow: 0 8px 22px rgba(107, 70, 255, 0.16),
+          0 0 0 3px rgba(107, 70, 255, 0.12);
       }
-      .brand .theme-toggle:hover {
-        border-color: var(--accent-1);
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-        transform: translateY(-1px);
-      }
-      .brand .theme-toggle:active {
-        transform: translateY(1px);
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-      }
-      .brand .theme-toggle:focus {
-        outline: none;
-        box-shadow: 0 0 0 4px rgba(124, 92, 255, 0.08);
+      html[data-theme="light"] .file-trigger:hover,
+      html[data-theme="light"] .toggle:hover,
+      html[data-theme="light"] select:hover,
+      html[data-theme="light"] input[type="color"]:hover,
+      html[data-theme="light"] input[type="range"]:hover,
+      html[data-theme="light"] input[type="text"]:hover {
+        box-shadow: 0 0 0 3px rgba(107, 70, 255, 0.12);
       }
     </style>
   </head>
