--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
     />
 
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <!-- Scripts in dependency order -->
+    <script src="assets/js/utils.js"></script>
+    <script src="assets/js/theme.js"></script>
+    <script src="assets/js/background.js"></script>
+    <script src="assets/js/metadata.js"></script>
+    <script src="assets/js/drawing.js"></script>
+    <script src="assets/js/reciters.js"></script>
+    <script src="assets/js/translations.js"></script>
+    <script src="assets/js/audio.js"></script>
     <script src="assets/js/app.js" defer></script>
   </head>
   <body>
