--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
       <main id="preview-container" class="preview">
         <!-- Loading... -->
       </main>
+
+      <a
+        href="https://theaaa-studio.github.io/AAA_Personal_Portfolio/"
+        target="_blank"
+        class="version-info"
+      >
+        Version 1.0 • <span class="dev-name">Developed by TheAAA</span> • 2025
+      </a>
     </div>
   </body>
 </html>
