mobile responce is updated with navigation button

--- a/assets/html/brand.html
+++ b/assets/html/brand.html
@@ -14,4 +14,12 @@
             🌙
           </button>
         </div>
+        
+        <a
+          href="https://theaaa-studio.github.io/AAA_Personal_Portfolio/"
+          target="_blank"
+          class="mobile-version-info"
+        >
+          Version 1.0 • <span class="dev-name">Developed by TheAAA</span> • 2025
+        </a>
 
