Multi translation with fort arabic and mobile view fixed

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
       <nav class="mobile-nav">
         <button class="nav-btn active" data-target="brand-container">
-          <i class="fas fa-home"></i> <span>Brand</span>
+          <i class="fas fa-home"></i> <span>Home</span>
         </button>
         <button class="nav-btn" data-target="input-panel-container">
           <i class="fas fa-pen"></i> <span>Input</span>
