--- a/assets/html/input-panel.html
+++ b/assets/html/input-panel.html
@@ -43,6 +43,7 @@
                 >Translation (text)</label
               >
               <select id="translationEdition">
+                <option value="en.daryabadi" selected>English — Abdul Majid Daryabadi</option>
                 <option value="en.asad">English — Muhammad Asad</option>
                 <option value="en.sahih">English — Sahih International</option>
                 <option value="en.pickthall">English — Pickthall</option>
