multi langual reciter added

--- a/assets/html/input-panel.html
+++ b/assets/html/input-panel.html
@@ -18,7 +18,7 @@
 
           <div class="two-col-inline">
             <div class="field">
-              <label class="small" for="reciter">Reciter (Arabic)</label>
+              <label class="small" for="reciter">Reciter</label>
               <select id="reciter">
                 <option value="Abdul_Basit_Mujawwad_128kbps">
                   Abdul Basit — Mujawwad (Arabic)
