--- a/assets/html/brand.html
+++ b/assets/html/brand.html
@@ -20,6 +20,6 @@
           target="_blank"
           class="mobile-version-info"
         >
-          Version 1.0 • <span class="dev-name">Developed by TheAAA</span> • 2025
+          <span class="dev-name">Developed by TheAAA</span> • 2025
         </a>
 
