--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         target="_blank"
         class="version-info"
       >
-        Version 1.0 • <span class="dev-name">Developed by TheAAA</span> • 2025
+        <span class="dev-name">Developed by TheAAA</span> • 2025
       </a>
     </div>
   </body>
