default english translation resolved

--- a/assets/html/input-panel.html
+++ b/assets/html/input-panel.html
@@ -43,9 +43,9 @@
                 >Translation (text)</label
               >
               <select id="translationEdition">
-                <option value="en.daryabadi" selected>English — Abdul Majid Daryabadi</option>
+                <option value="en.daryabadi">English — Abdul Majid Daryabadi</option>
                 <option value="en.asad">English — Muhammad Asad</option>
-                <option value="en.sahih">English — Sahih International</option>
+                <option value="en.sahih" selected>English — Sahih International</option>
                 <option value="en.pickthall">English — Pickthall</option>
                 <option value="en.yusufali">English — Yusuf Ali</option>
                 <option value="bn.bengali">
