--- a/assets/html/background-panel.html
+++ b/assets/html/background-panel.html
@@ -19,23 +19,10 @@
       <span>Media (image/video)</span>
     </label>
 
-    <!-- Color pickers in horizontal layout -->
-    <div class="field" style="display: flex; gap: 1rem; align-items: flex-start;">
-      <div style="flex: 1;" id="bgColorField">
-        <label class="small" for="bgColor" style="white-space: nowrap;">Background Color</label>
-        <input id="bgColor" type="color" value="#FBEEE8" />
-      </div>
-      <div style="flex: 1;">
-        <label class="small" style="white-space: nowrap;">Ayah Box Color</label>
-        <div style="display: flex; gap: 0.5rem; align-items: center;">
-          <input id="textBoxColor" type="color" value="#000000" style="width: 50px; height: 50px;" />
-          <div style="flex: 1; display: flex; align-items: center; gap: 0.5rem; min-width: 150px;">
-            <label class="small" for="textBoxOpacity" style="white-space: nowrap; margin: 0; font-size: 0.75rem;">Opacity:</label>
-            <input id="textBoxOpacity" type="range" min="0" max="100" value="12" style="flex: 1; min-width: 80px;" />
-            <span id="textBoxOpacityVal" class="small" style="min-width: 3ch; font-size: 0.75rem;">12%</span>
-          </div>
-        </div>
-      </div>
+    <!-- Background Color (shown when 'color' is selected) -->
+    <div class="field" id="bgColorField">
+      <label class="small" for="bgColor">Background Color</label>
+      <input id="bgColor" type="color" value="#FBEEE8" />
     </div>
 
     <!-- Media selector (shown when 'media' is selected) -->
@@ -77,6 +64,19 @@
         accept="image/*,video/*"
         multiple
       />
+    </div>
+
+    <!-- Ayah Box Color and Opacity (always visible at the bottom) -->
+    <div class="field">
+      <label class="small">Ayah Box Color</label>
+      <div style="display: flex; gap: 0.5rem; align-items: center;">
+        <input id="textBoxColor" type="color" value="#000000" style="width: 50px; height: 50px;" />
+        <div style="flex: 1; display: flex; align-items: center; gap: 0.5rem; min-width: 150px;">
+          <label class="small" for="textBoxOpacity" style="white-space: nowrap; margin: 0; font-size: 0.75rem;">Opacity:</label>
+          <input id="textBoxOpacity" type="range" min="0" max="100" value="12" style="flex: 1; min-width: 80px;" />
+          <span id="textBoxOpacityVal" class="small" style="min-width: 3ch; font-size: 0.75rem;">12%</span>
+        </div>
+      </div>
     </div>
   </div>
 </div>
