creadit color is working

--- a/assets/html/brand.html
+++ b/assets/html/brand.html
@@ -20,6 +20,7 @@
           target="_blank"
           class="mobile-version-info"
         >
+          <img src="assets/quran.png" alt="Logo" class="credit-logo">
           <span class="dev-name">Developed by TheAAA</span> • 2025
         </a>
 
