--- a/assets/html/credits-panel.html
+++ b/assets/html/credits-panel.html
@@ -11,6 +11,10 @@
                 value=""
               />
             </div>
+            <div class="field">
+              <label class="small" for="creditColor">Credit Color</label>
+              <input id="creditColor" type="color" value="#1f1f1f" />
+            </div>
             <label class="toggle" title="Show a Made by badge">
               <input type="checkbox" id="creditMadeBy" checked />
               <span>Made by</span>
