--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         target="_blank"
         class="version-info"
       >
+        <img src="assets/quran.png" alt="Logo" class="credit-logo">
         <span class="dev-name">Developed by TheAAA</span> • 2025
       </a>
     </div>
