--- a/assets/html/credits-panel.html
+++ b/assets/html/credits-panel.html
@@ -1,35 +1,31 @@
-        <!-- Panel: Credits -->
-        <div class="panel">
-          <h3>Credits</h3>
-          <div class="credits-row">
-            <div class="field" style="flex: 1; min-width: 200px;">
-              <label class="small" for="madeByInput">Made by (name)</label>
-              <input
-                id="madeByInput"
-                type="text"
-                placeholder="Your name or channel"
-                value=""
-              />
-            </div>
-            <label class="toggle" title="Show a Made by badge">
-              <input type="checkbox" id="creditMadeBy" checked />
-              <span>Made by</span>
-            </label>
-            <label
-              class="toggle"
-              title="Show attribution to data/audio providers"
-            >
-              <input type="checkbox" id="creditData" checked />
-              <span>Data Source</span>
-            </label>
-            <label class="toggle" title="Show your creator tag">
-              <input type="checkbox" id="creditCreator" checked />
-              <span>Editor Developer</span>
-            </label>
-            <div class="field" style="flex: 0 0 auto;">
-              <label class="small" for="creditColor">Credit Color</label>
-              <input id="creditColor" type="color" value="#1f1f1f" />
-            </div>
-          </div>
-        </div>
-
+<!-- Panel: Credits -->
+<div class="panel">
+  <h3>Credits</h3>
+  <div class="credits-row">
+    <div class="field" style="flex: 1; min-width: 200px">
+      <label class="small" for="madeByInput">Made by (name)</label>
+      <input
+        id="madeByInput"
+        type="text"
+        placeholder="Your name or channel"
+        value=""
+      />
+    </div>
+    <label class="toggle" title="Show a Made by badge">
+      <input type="checkbox" id="creditMadeBy" checked />
+      <span>Made by</span>
+    </label>
+    <label class="toggle" title="Show attribution to data/audio providers">
+      <input type="checkbox" id="creditData" checked />
+      <span>Data Source</span>
+    </label>
+    <label class="toggle" title="Show your creator tag">
+      <input type="checkbox" id="creditCreator" checked />
+      <span>Editor Developer</span>
+    </label>
+    <div class="field" style="flex: 0 0 auto">
+      <label class="small" for="creditColor">Credit Color</label>
+      <input id="creditColor" type="color" value="#1f1f1f" />
+    </div>
+  </div>
+</div>
