--- a/assets/html/preview.html
+++ b/assets/html/preview.html
@@ -1,3 +1,13 @@
+        <div class="preview-header">
+          <div class="ar-toggle">
+            <button id="arVerticalBtn" class="ar-btn active" title="Vertical (9:16)">
+              <i class="fas fa-mobile-alt"></i> 9:16
+            </button>
+            <button id="arSquareBtn" class="ar-btn" title="Square (1:1)">
+              <i class="fas fa-square"></i> 1:1
+            </button>
+          </div>
+        </div>
         <div class="preview-stage">
           <canvas
             id="previewCanvas"
