developed by theaaa 2025 link show in PC

--- a/assets/html/preview.html
+++ b/assets/html/preview.html
@@ -40,6 +40,15 @@
             >
           </div>
 
+          <a
+            href="https://theaaa-studio.github.io/AAA_Personal_Portfolio/"
+            target="_blank"
+            class="version-info"
+          >
+            <img src="assets/quran.png" alt="Logo" class="credit-logo" />
+            <span class="dev-name">Developed by TheAAA</span> • 2025
+          </a>
+
           <div id="audioErrorMessage" class="audio-error-message"></div>
         </div>
 
