--- a/index.html
+++ b/index.html
@@ -381,14 +381,7 @@
         </button>
       </nav>
 
-      <a
-        href="https://theaaa-studio.github.io/AAA_Personal_Portfolio/"
-        target="_blank"
-        class="version-info"
-      >
-        <img src="assets/quran.png" alt="Logo" class="credit-logo" />
-        <span class="dev-name">Developed by TheAAA</span> • 2025
-      </a>
+      <!-- Version info moved to preview.html -->
     </div>
   </body>
 </html>
