zip export is working

--- a/index.html
+++ b/index.html
@@ -186,6 +186,8 @@
     <script src="assets/js/translations.js"></script>
     <script src="assets/js/audio.js"></script>
     <script src="assets/js/html-loader.js"></script>
+    <!-- JSZip library for creating zip files -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="assets/js/app.js" defer></script>
   </head>
   <body>
