hadith is woking with image export

--- a/assets/html/hadith-brand.html
+++ b/assets/html/hadith-brand.html
@@ -1,8 +1,8 @@
         <div class="brand">
           <a href="index.html" class="logo-link"><div class="logo"></div></a>
           <div>
-            <h1 class="title">Quran Shorts - Editor</h1>
-            <p class="subtitle">Spread the message of Quran in short videos and images.</p>
+            <h1 class="title">Hadith Shorts - Editor</h1>
+            <p class="subtitle">Spread the wisdom of Prophet Muhammad (SAW) in short videos and images.</p>
           </div>
           <!-- Theme toggle placed on the same brand row, aligned to the right -->
           <button
@@ -15,5 +15,3 @@
           </button>
         </div>
         
-
-
