home is now at top in mobile responsive

--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
 <body>
     <div class="landing-container">
         <header class="landing-header">
-            <div class="header-controls">
-                <button id="themeToggle" class="theme-toggle" title="Toggle light / dark theme" aria-pressed="false">🌙</button>
-            </div>
             <div class="logo">
                 <img src="assets/quran.png" alt="Logo">
                 <h1>Islamic Shorts Editor</h1>
+                <button id="themeToggle" class="theme-toggle" title="Toggle light / dark theme" aria-pressed="false">🌙</button>
             </div>
             <p>Create beautiful vertical videos for social media</p>
         </header>
@@ -29,14 +27,14 @@
             <a href="quran.html" class="option-card">
                 <div class="card-icon"><i class="fas fa-book-quran"></i></div>
                 <h2>Quran Shorts</h2>
-                <p>Create videos with Quran recitations and translations.</p>
+                <p>Spread the message of Quran in short videos and images.</p>
                 <span class="btn">Open Editor <i class="fas fa-arrow-right"></i></span>
             </a>
             
             <a href="hadith.html" class="option-card">
                 <div class="card-icon"><i class="fas fa-scroll"></i></div>
                 <h2>Hadith Shorts</h2>
-                <p>Create videos with Hadith narrations and wisdom.</p>
+                <p>Spread the wisdom of Prophet Muhammad (SAW) in images.</p>
                 <span class="btn">Open Editor <i class="fas fa-arrow-right"></i></span>
             </a>
         </div>
