--- a/assets/html/brand.html
+++ b/assets/html/brand.html
@@ -1,10 +1,9 @@
         <div class="brand">
           <a href="index.html" class="logo-link"><div class="logo"></div></a>
-          <div>
+          <div class="brand-title">
             <h1 class="title">Quran Shorts - Editor</h1>
             <p class="subtitle">Spread the message of Quran in short videos and images.</p>
           </div>
-          <!-- Theme toggle placed on the same brand row, aligned to the right -->
           <button
             id="themeToggle"
             class="theme-toggle"
