--- a/assets/html/hadith-brand.html
+++ b/assets/html/hadith-brand.html
@@ -1,10 +1,9 @@
         <div class="brand">
           <a href="index.html" class="logo-link"><div class="logo"></div></a>
-          <div>
+          <div class="brand-title">
             <h1 class="title">Hadith Shorts - Editor</h1>
             <p class="subtitle">Spread the wisdom of Prophet Muhammad (SAW) in short videos and images.</p>
           </div>
-          <!-- Theme toggle placed on the same brand row, aligned to the right -->
           <button
             id="themeToggle"
             class="theme-toggle"
