--- a/hadith.html
+++ b/hadith.html
@@ -355,10 +355,8 @@
       </main>
 
       <nav class="mobile-nav">
-        <button class="nav-btn active" data-target="brand-container">
-          <i class="fas fa-home"></i> <span>Home</span>
-        </button>
-        <button class="nav-btn" data-target="input-panel-container">
+
+        <button class="nav-btn active" data-target="input-panel-container">
           <i class="fas fa-pen"></i> <span>Input</span>
         </button>
         <button class="nav-btn" data-target="background-panel-container">
