--- a/assets/html/hadith-input-panel.html
+++ b/assets/html/hadith-input-panel.html
@@ -7,13 +7,9 @@
               <label class="small" for="hadithBook">Book</label>
               <select id="hadithBook"></select>
             </div>
-            <div class="field field-hadith-start">
-              <label class="small" for="hadithStart">Start Hadith</label>
-              <input type="number" id="hadithStart" min="1" value="1">
-            </div>
-            <div class="field field-hadith-end">
-              <label class="small" for="hadithEnd">End Hadith</label>
-              <input type="number" id="hadithEnd" min="1" value="1">
+            <div class="field field-hadith-number">
+              <label class="small" for="hadithNumber">Hadith Number</label>
+              <input type="number" id="hadithNumber" min="1" value="1">
             </div>
 
             <div class="field field-translation">
