develop by located to Github

--- a/assets/html/preview.html
+++ b/assets/html/preview.html
@@ -41,7 +41,7 @@
           </div>
 
           <a
-            href="https://theaaa-studio.github.io/AAA_Personal_Portfolio/"
+            href="https://github.com/theaaa-studio"
             target="_blank"
             class="version-info"
           >
