--- a/hadith.html
+++ b/hadith.html
@@ -82,7 +82,7 @@
         "author": {
           "@type": "Organization",
           "name": "TheAAA",
-          "url": "https://theaaa-studio.github.io/AAA_Personal_Portfolio/"
+          "url": "https://github.com/theaaa-studio"
         },
         "isAccessibleForFree": true,
         "inLanguage": "en",
