--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         
         <footer class="landing-footer">
-            <a href="https://theaaa-studio.github.io/AAA_Personal_Portfolio/" target="_blank" class="developer-link">
+            <a href="https://github.com/theaaa-studio" target="_blank" class="developer-link">
                 <img src="assets/quran.png" alt="Logo" class="footer-logo">
                 <span>Developed by TheAAA • 2025</span>
             </a>
