--- a/assets/html/hadith-preview.html
+++ b/assets/html/hadith-preview.html
@@ -21,7 +21,7 @@
           <!-- Removed Play/Stop/Volume controls for Hadith Editor -->
 
           <a
-            href="https://theaaa-studio.github.io/AAA_Personal_Portfolio/"
+            href="https://github.com/theaaa-studio"
             target="_blank"
             class="version-info"
           >
