file name changed

--- a/quran.html
+++ b/quran.html
@@ -180,15 +180,15 @@
     <script src="assets/js/utils.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="assets/js/background.js"></script>
-    <script src="assets/js/metadata.js"></script>
-    <script src="assets/js/drawing.js"></script>
-    <script src="assets/js/reciters.js"></script>
-    <script src="assets/js/translations.js"></script>
-    <script src="assets/js/audio.js"></script>
-    <script src="assets/js/html-loader.js"></script>
+    <script src="assets/js/quran-metadata.js"></script>
+    <script src="assets/js/quran-drawing.js"></script>
+    <script src="assets/js/quran-reciters.js"></script>
+    <script src="assets/js/quran-translations.js"></script>
+    <script src="assets/js/quran-audio.js"></script>
+    <script src="assets/js/quran-html-loader.js"></script>
     <!-- JSZip library for creating zip files -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-    <script src="assets/js/app.js" defer></script>
+    <script src="assets/js/quran-app.js" defer></script>
   </head>
   <body>
     <div class="app">
